default prettier formatting on docs/use-the-network
npx prettier --write --prose-wrap always docs/use-the-network

--- a/docs/use-the-network/community-projects/community-projects.mdx
+++ b/docs/use-the-network/community-projects/community-projects.mdx
@@ -4,11 +4,11 @@ sidebar_label: Community Projects
 slug: /use-the-network/community-projects
 ---
 
-# Community Projects 
+# Community Projects
 
-Developers are using the Helium Network for hundreds of IoT and sensing applications. Here is a snapshot of what's being built. All these projects are hosted on the [Helium Hackster Community](https://www.hackster.io/helium).
-
-
+Developers are using the Helium Network for hundreds of IoT and sensing
+applications. Here is a snapshot of what's being built. All these projects are
+hosted on the [Helium Hackster Community](https://www.hackster.io/helium).
 
 ### Agricultural
 
@@ -64,7 +64,6 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
 ></iframe>
 <div />
 
-
 ### Environmental
 
 <iframe
@@ -116,9 +115,7 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
 ></iframe>
 <div />
 
-
 ### Healthcare
-
 
 <iframe
   frameborder="0"
@@ -152,7 +149,6 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
   width="350"
 ></iframe>
 <div />
-
 
 ### Industrial
 
@@ -189,8 +185,6 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
 ></iframe>
 <div />
 
-
-
 ### Security
 
 <iframe
@@ -200,7 +194,6 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
   src="https://www.hackster.io/leroy2le/rv-security-protection-via-the-helium-network-5ca636/embed"
   width="350"
 ></iframe>
-
 
 ### Tracking
 
@@ -251,8 +244,6 @@ Developers are using the Helium Network for hundreds of IoT and sensing applicat
   src="https://www.hackster.io/abouhatab/helium-network-gps-tracking-directly-in-google-sheets-f77378/embed"
   width="350"
 ></iframe>
-
-
 
 ### Utility
 
