--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -6,7 +6,8 @@ slug: /use-the-network/devices
 
 # Helium Devices
 
-The Helium network supports any LoRaWAN capable device meeting the v1.0.2, v1.0.3, or v1.0.4 specification.
+The Helium network supports any LoRaWAN capable device meeting the v1.0.2,
+v1.0.3, or v1.0.4 specification.
 
 :::info
 
@@ -27,7 +28,7 @@ For those looking to create a solution with purpose built end devices, our ready
 to use section provides device references and onboarding guides for some of the
 most well known manufactures.
 
-[Browse Devices](/use-the-network/devices/ready-to-use)  
+[Browse Devices](/use-the-network/devices/ready-to-use)
 
 ### Development Devices
 
