--- a/docs/use-the-network/devices/ready-to-use/dragino/lht65.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/lht65.mdx
@@ -12,9 +12,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 ## Dragino LHT65
 
 <img
-  src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/dragino/lht65.jpg"
-  )}
+  src={useBaseUrl("img/use-the-network/devices/ready-to-use/dragino/lht65.jpg")}
 />
 
 Multi Sensor Device with Built in Temperature and Humidity Sensor
@@ -74,22 +72,23 @@ manual for instructions.
 
 If you would like to easily view your device's data on a web or mobile dashboard
 for free, this device is supported out of the box by myDevices Cayenne via the
-integration on Console. 
+integration on Console.
 
 To add the LHT65 to myDevices Cayenne, you do not need to set up a Decode script
 as described below. Cayenne takes the encoded payload directly and parses the
 temperature and other data elements from it.
 
-Be careful to select **Helium** when adding the LHT65 to Cayenne.
-As described [here](https://docs.mydevices.com/docs/lorawan/helium), select
+Be careful to select **Helium** when adding the LHT65 to Cayenne. As described
+[here](https://docs.mydevices.com/docs/lorawan/helium), select
+
 1. "Add new..."
 2. "Device/Widget"
 3. "LoRa"
 4. "Helium"
 5. select Dragino LHT65
 
-On the Helium Console, select `Flow` and directly connect the LHT65 Device to the 
-Cayenne Integration.  Do not use a Decoder.
+On the Helium Console, select `Flow` and directly connect the LHT65 Device to
+the Cayenne Integration. Do not use a Decoder.
 
 ### Decode Device Payload
 
