--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100-data-logger.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100-data-logger.mdx
@@ -3,7 +3,9 @@ id: sensecap-s2100-data-logger
 hide_title: true
 title: SenseCAP S2100 LoRaWAN Data Logger
 description:
-  SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade sensor hub that can support 100+ industrial sensors and 100+ grove sensors including various sensor types such as Analog/I2C/UART/RS485.
+  SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade
+  sensor hub that can support 100+ industrial sensors and 100+ grove sensors
+  including various sensor types such as Analog/I2C/UART/RS485.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100.jpeg
 sidebar_label: SenseCAP S2100 LoRaWAN Data Logger
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2100-data-logger
@@ -13,7 +15,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## SenseCAP S2100 LoRaWAN Data Logger
 
-SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade sensor hub that can support 100+ industrial sensors and 100+ grove sensors including various sensor types such as Analog/I2C/UART/RS485.
+SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade sensor
+hub that can support 100+ industrial sensors and 100+ grove sensors including
+various sensor types such as Analog/I2C/UART/RS485.
 
 <img
   src={useBaseUrl(
@@ -42,6 +46,7 @@ SenseCAP S2100 LoRaWAN Data Logger is an easy-to-deploy, industrial-grade sensor
 #### Battery:
 
 (contained in equipment)
+
 - Battery Life: up to 10 years (Depends on the power consumption of the sensor)
 - Battery Capacity: 19 Ah (non-rechargeable)
 - Battery Type: Standard D-size SOCl2 Battery
