--- a/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/seeed-studio-lorawan-dev-kit.mdx
@@ -3,7 +3,13 @@ id: seeed-studio-lorawan-dev-kit
 hide_title: true
 title: Seeed Studio LoRaWAN Dev Kit
 description:
-  The kit includes a Wio Terminal master controller with WIFI/BLE and display, as well as carefully selected Grove - LoRa-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor, Grove - Temp&Humi Sensor (SHT40), and Grove - Vision AI Module. Humi Sensor (SHT40), and Grove - Vision AI Module. This kit is a perfect combination of LoRa and Edge AI, which allows software engineers to quickly deploy their first LoRaWAN projects through plug-and-play connectivity.
+  The kit includes a Wio Terminal master controller with WIFI/BLE and display,
+  as well as carefully selected Grove - LoRa-E5, Grove - VOC and eCO2 Gas Sensor
+  SGP30, Grove - Soil Moisture Sensor, Grove - Temp&Humi Sensor (SHT40), and
+  Grove - Vision AI Module. Humi Sensor (SHT40), and Grove - Vision AI Module.
+  This kit is a perfect combination of LoRa and Edge AI, which allows software
+  engineers to quickly deploy their first LoRaWAN projects through plug-and-play
+  connectivity.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit.jpeg
 sidebar_label: Seeed Studio LoRaWAN Dev Kit
 slug: /use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-lorawan-dev-kit
@@ -13,7 +19,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## Seeed Studio LoRaWAN Dev Kit
 
-The kit includes a Wio Terminal master controller with WIFI/BLE and display, as well as carefully selected Grove - LoRa-E5, Grove - VOC and eCO2 Gas Sensor SGP30, Grove - Soil Moisture Sensor, Grove - Temp&Humi Sensor (SHT40), and Grove - Vision AI Module. Humi Sensor (SHT40), and Grove - Vision AI Module. This kit is a perfect combination of LoRa and Edge AI, which allows software engineers to quickly deploy their first LoRaWAN projects through plug-and-play connectivity.
+The kit includes a Wio Terminal master controller with WIFI/BLE and display, as
+well as carefully selected Grove - LoRa-E5, Grove - VOC and eCO2 Gas Sensor
+SGP30, Grove - Soil Moisture Sensor, Grove - Temp&Humi Sensor (SHT40), and
+Grove - Vision AI Module. Humi Sensor (SHT40), and Grove - Vision AI Module.
+This kit is a perfect combination of LoRa and Edge AI, which allows software
+engineers to quickly deploy their first LoRaWAN projects through plug-and-play
+connectivity.
 
 <img
   src={useBaseUrl(
@@ -27,12 +39,12 @@ The kit includes a Wio Terminal master controller with WIFI/BLE and display, as 
 
 ### Part List
 
-| Wio Terminal                                               |  x1 |
-|------------------------------------------------------------|----|
-|  Grove - LoRa-E5                                           |  x1 |
-|  Grove-VOC and eCO2 Gas Sensor SGP30                       |  x1 |
-|  Grove - Soil Moisture Sensor                              |  x1 |
-|  Grove - Temp&Humi Sensor(SHT40)                           |  x1 |
-|  Grove - Vision AI Module                                  |  x1 |
-|  Grove - Cable                                             |  x4 |
-|  Grove - 4 pin Male Jumper to Grove 4 pin Conversion Cable |  x1 |
+| Wio Terminal                                              | x1  |
+| --------------------------------------------------------- | --- |
+| Grove - LoRa-E5                                           | x1  |
+| Grove-VOC and eCO2 Gas Sensor SGP30                       | x1  |
+| Grove - Soil Moisture Sensor                              | x1  |
+| Grove - Temp&Humi Sensor(SHT40)                           | x1  |
+| Grove - Vision AI Module                                  | x1  |
+| Grove - Cable                                             | x4  |
+| Grove - 4 pin Male Jumper to Grove 4 pin Conversion Cable | x1  |
