--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2101-tem-humid.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2101-tem-humid.mdx
@@ -3,7 +3,13 @@ id: sensecap-s2101-tem-humid
 hide_title: true
 title: SenseCAP S2101- LoRaWAN Air Temperature and Humidity Sensor
 description:
-  SenseCAP 2101 temperature & humidity sensors satisfy industrial long-distance data acquisition with a wide range of -40°C to 85°C and 0 to 100 %RH respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+  SenseCAP 2101 temperature & humidity sensors satisfy industrial long-distance
+  data acquisition with a wide range of -40°C to 85°C and 0 to 100 %RH
+  respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade
+  and a built-in replaceable battery for minimal maintenance, it also supports
+  three different LoRaWAN network architectures enabling you to easily join it
+  in existing gateways and network servers to build flexible and
+  high-performance sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2101.jpeg
 sidebar_label: SenseCAP S2101- LoRaWAN Air Temperature and Humidity Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2101-tem-humid
@@ -13,7 +19,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## SenseCAP S2101- LoRaWAN Air Temperature and Humidity Sensor
 
-SenseCAP 2101 temperature & humidity sensors satisfy industrial long-distance data acquisition with a wide range of -40°C to 85°C and 0 to 100 %RH respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+SenseCAP 2101 temperature & humidity sensors satisfy industrial long-distance
+data acquisition with a wide range of -40°C to 85°C and 0 to 100 %RH
+respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and
+a built-in replaceable battery for minimal maintenance, it also supports three
+different LoRaWAN network architectures enabling you to easily join it in
+existing gateways and network servers to build flexible and high-performance
+sensor network.
 
 <img
   src={useBaseUrl(
@@ -43,6 +55,7 @@ SenseCAP 2101 temperature & humidity sensors satisfy industrial long-distance da
 #### Battery:
 
 (contained in equipment)
-- Battery Life: up to 10 years 
+
+- Battery Life: up to 10 years
 - Battery Capacity: 19 Ah (non-rechargeable)
 - Battery Type: Standard D-size SOCl2 Battery
