--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102-light.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102-light.mdx
@@ -3,7 +3,13 @@ id: sensecap-s2102-light
 hide_title: true
 title: SenseCAP S2102 - LoRaWAN Light Intensity Sensor
 description:
-  SenseCAP S2102 light intensity sensors satisfy industrial long-distance data acquisition with a wide range of intensity of light in lux from 0 - 160000 lux respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network. 
+  SenseCAP S2102 light intensity sensors satisfy industrial long-distance data
+  acquisition with a wide range of intensity of light in lux from 0 - 160000 lux
+  respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade
+  and a built-in replaceable battery for minimal maintenance, it also supports
+  three different LoRaWAN network architectures enabling you to easily join it
+  in existing gateways and network servers to build flexible and
+  high-performance sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102.jpeg
 sidebar_label: SenseCAP S2102 - LoRaWAN Light Intensity Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2102-light
@@ -13,7 +19,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## SenseCAP S2102 - LoRaWAN Light Intensity Sensor
 
-SenseCAP S2102 light intensity sensors satisfy industrial long-distance data acquisition with a wide range of intensity of light in lux from 0 - 160000 lux respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+SenseCAP S2102 light intensity sensors satisfy industrial long-distance data
+acquisition with a wide range of intensity of light in lux from 0 - 160000 lux
+respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and
+a built-in replaceable battery for minimal maintenance, it also supports three
+different LoRaWAN network architectures enabling you to easily join it in
+existing gateways and network servers to build flexible and high-performance
+sensor network.
 
 <img
   src={useBaseUrl(
@@ -42,6 +54,7 @@ SenseCAP S2102 light intensity sensors satisfy industrial long-distance data acq
 #### Battery:
 
 (contained in equipment)
-- Battery Life: up to 10 years 
+
+- Battery Life: up to 10 years
 - Battery Capacity: 19 Ah (non-rechargeable)
 - Battery Type: Standard D-size SOCl2 Battery
