--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103-co2-tem-humid.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103-co2-tem-humid.mdx
@@ -3,7 +3,13 @@ id: sensecap-s2103-co2-tem-humid
 hide_title: true
 title: SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensor
 description:
-  SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy industrial long-distance data acquisition with a wide range of 400 to 10000 ppm, -40°C to 85°C and 0 to 100% RH respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.  
+  SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy
+  industrial long-distance data acquisition with a wide range of 400 to 10000
+  ppm, -40°C to 85°C and 0 to 100% RH respectively. With Bluetooth 5.0 for easy
+  configuration and firmware upgrade and a built-in replaceable battery for
+  minimal maintenance, it also supports three different LoRaWAN network
+  architectures enabling you to easily join it in existing gateways and network
+  servers to build flexible and high-performance sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103.jpeg
 sidebar_label: SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2103-co2-tem-humid
@@ -13,7 +19,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensor
 
-SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy industrial long-distance data acquisition with a wide range of 400 to 10000 ppm, -40°C to 85°C and 0 to 100% RH respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy
+industrial long-distance data acquisition with a wide range of 400 to 10000 ppm,
+-40°C to 85°C and 0 to 100% RH respectively. With Bluetooth 5.0 for easy
+configuration and firmware upgrade and a built-in replaceable battery for
+minimal maintenance, it also supports three different LoRaWAN network
+architectures enabling you to easily join it in existing gateways and network
+servers to build flexible and high-performance sensor network.
 
 <img
   src={useBaseUrl(
@@ -44,6 +56,7 @@ SenseCAP S2103- LoRaWAN CO2, Temperature, and Humidity Sensors satisfy industria
 #### Battery:
 
 (contained in equipment)
-- Battery Life: up to 10 years 
+
+- Battery Life: up to 10 years
 - Battery Capacity: 19 Ah (non-rechargeable)
 - Battery Type: Standard D-size SOCl2 Battery
