--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104-soil-mois-tem.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104-soil-mois-tem.mdx
@@ -3,7 +3,13 @@ id: sensecap-s2104-soil-mois-tem
 hide_title: true
 title: SenseCAP S2104 - LoRaWAN Soil Moisture and Temperature Sensor
 description:
-  SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy industrial long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³) and -40 ~ 80℃ respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+  SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy
+  industrial long-distance data acquisition with a wide range of 0 ~ 100%
+  (m³/m³) and -40 ~ 80℃ respectively. With Bluetooth 5.0 for easy configuration
+  and firmware upgrade and a built-in replaceable battery for minimal
+  maintenance, it also supports three different LoRaWAN network architectures
+  enabling you to easily join it in existing gateways and network servers to
+  build flexible and high-performance sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104.jpeg
 sidebar_label: SenseCAP S2104 - LoRaWAN Soil Moisture and Temperature Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2104-soil-mois-tem
@@ -13,7 +19,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## SenseCAP S2104 - LoRaWAN Soil Moisture and Temperature Sensor
 
-SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy industrial long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³) and -40 ~ 80℃ respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy
+industrial long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³)
+and -40 ~ 80℃ respectively. With Bluetooth 5.0 for easy configuration and
+firmware upgrade and a built-in replaceable battery for minimal maintenance, it
+also supports three different LoRaWAN network architectures enabling you to
+easily join it in existing gateways and network servers to build flexible and
+high-performance sensor network.
 
 <img
   src={useBaseUrl(
@@ -33,7 +45,7 @@ SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy industria
 
 #### Sensors:
 
-- Soil Moisture 
+- Soil Moisture
 - Soil Temperature
 
 #### Weight:
@@ -43,6 +55,7 @@ SenseCAP S2104 - LoRaWAN Soil Temperature and Moisture sensors satisfy industria
 #### Battery:
 
 (contained in equipment)
-- Battery Life: up to 10 years 
+
+- Battery Life: up to 10 years
 - Battery Capacity: 19 Ah (non-rechargeable)
 - Battery Type: Standard D-size SOCl2 Battery
