--- a/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105-soil-mois-tem-ec.mdx
+++ b/docs/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105-soil-mois-tem-ec.mdx
@@ -3,7 +3,13 @@ id: sensecap-s2105-soil-mois-tem-ec
 hide_title: true
 title: SenseCAP S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor
 description:
-  SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³), -40 ~ 80℃, and 0 to 23 dS/m respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+  SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial
+  long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³), -40 ~
+  80℃, and 0 to 23 dS/m respectively. With Bluetooth 5.0 for easy configuration
+  and firmware upgrade and a built-in replaceable battery for minimal
+  maintenance, it also supports three different LoRaWAN network architectures
+  enabling you to easily join it in existing gateways and network servers to
+  build flexible and high-performance sensor network.
 image: img/use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105.jpeg
 sidebar_label: SenseCAP S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor
 slug: /use-the-network/devices/ready-to-use/seeed-studio/sensecap-s2105-soil-mois-tem-ec
@@ -13,7 +19,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## SenseCAP S2105-LoRaWAN Soil Moisture, Temperature and EC Sensor
 
-SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³), -40 ~ 80℃, and 0 to 23 dS/m respectively. With Bluetooth 5.0 for easy configuration and firmware upgrade and a built-in replaceable battery for minimal maintenance, it also supports three different LoRaWAN network architectures enabling you to easily join it in existing gateways and network servers to build flexible and high-performance sensor network.
+SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial
+long-distance data acquisition with a wide range of 0 ~ 100% (m³/m³), -40 ~ 80℃,
+and 0 to 23 dS/m respectively. With Bluetooth 5.0 for easy configuration and
+firmware upgrade and a built-in replaceable battery for minimal maintenance, it
+also supports three different LoRaWAN network architectures enabling you to
+easily join it in existing gateways and network servers to build flexible and
+high-performance sensor network.
 
 <img
   src={useBaseUrl(
@@ -44,6 +56,7 @@ SenseCAP S2105 Soil Temperature, Moisture, and EC Sensor satisfy industrial long
 #### Battery:
 
 (contained in equipment)
-- Battery Life: up to 10 years 
+
+- Battery Life: up to 10 years
 - Battery Capacity: 19 Ah (non-rechargeable)
 - Battery Type: Standard D-size SOCl2 Battery
