--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -7,26 +7,31 @@ slug: /wallets/app-wallet/transfer-hotspot
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-
 # Transfer Hotspot
 
 As requested by the Community via HIP13, the Transfer Hotspot feature is
 available for Hotspot owners of the Network to transfer their Hotspots to
-another owner. 
+another owner.
 
 This feature enables Hotspot owners to transfer ownership of a Hotspot to
 another user. Once transferred, the new owner will receive all future Hotspot
-mining rewards. 
-
+mining rewards.
 
 ### Requirements
 
-- Only the wallet that owns the Hotspot on the blockchain can initiate a transfer.
+- Only the wallet that owns the Hotspot on the blockchain can initiate a
+  transfer.
 - These steps are for Seller with app version 3.10.0
-* Parties do not need to be physically next to the Hotspot for transfer to succeed.
+
+* Parties do not need to be physically next to the Hotspot for transfer to
+  succeed.
+
 - This feature requires both users to have a valid Helium wallet account
 - The Seller pays the transaction fee of ~55,000 DC.
-- Hotspots must have had Proof-of-Coverage activity (creating a challenge, beaconing, or witnessing) in the last 1200 blocks (approximately 20 hours) in order to be transferred. This is to ensure the Hotspot is fully functional for the protection of the buyer.
+- Hotspots must have had Proof-of-Coverage activity (creating a challenge,
+  beaconing, or witnessing) in the last 1200 blocks (approximately 20 hours) in
+  order to be transferred. This is to ensure the Hotspot is fully functional for
+  the protection of the buyer.
 
 :::warning
 
@@ -41,44 +46,49 @@ working condition.
 ## As a Seller, to initiate a Transfer Hotspot transaction:
 
 1. Navigate to the Hotspot to transfer and tap Settings > Transfer Hotspot.
-<img src={useBaseUrl("img/wallets/helium-app/transfer-entry-v2.png")} />
 
-2. Acknowledge that you, the Seller, will no longer own or earn mining rewards from
-   that Hotspot once transferred.
+   <img src={useBaseUrl("img/wallets/helium-app/transfer-entry-v2.png")} />
+
+2. Acknowledge that you, the Seller, will no longer own or earn mining rewards
+   from that Hotspot once transferred.
 3. Enter the Hotspot name in the text field to confirm you want to transfer the
    Hotspot.
 
 <img src={useBaseUrl("img/wallets/helium-app/transfer-initiate.png")} />
 
-
 4. You’ll see the payment user interface next. Enter the Buyer’s wallet address.
 
 <img src={useBaseUrl("img/wallets/helium-app/transfer-send-confirm-v2.png")} />
 
-5. Press Send Transfer Request to submit the Transfer. The transfer request will be automatically submitted.
-* Note that once submitted, transfers can not be cancelled, reversed, or changed.  Having the correct Buyer address is critical*
+5. Press Send Transfer Request to submit the Transfer. The transfer request will
+   be automatically submitted.
+
+- Note that once submitted, transfers can not be cancelled, reversed, or
+  changed. Having the correct Buyer address is critical\*
 
 6. Once the Transfer Hotspot transaction clears the blockchain, the Hotspot will
-   no longer appear in the Sellers account and will show up in the Buyers account. Both the Buyer and Seller will
-   receive a confirmation in their notification center.
+   no longer appear in the Sellers account and will show up in the Buyers
+   account. Both the Buyer and Seller will receive a confirmation in their
+   notification center.
 
 7. The Seller will see an activity entry on their Account page showing the
    Hotspot Transfer.
-
 
 :::
 
 ## As a Buyer:
 
-Once the the transaction clears, a notification will appear in the Buyer’s notification center.  The Hotspot will then show up in the Buyers wallet.
-Tap on the notification to view the transaction.
+Once the the transaction clears, a notification will appear in the Buyer’s
+notification center. The Hotspot will then show up in the Buyers wallet. Tap on
+the notification to view the transaction.
 
-
-<img src={useBaseUrl("img/wallets/helium-app/transfer-completed-transaction-v2.png")} />
-
+<img
+  src={useBaseUrl(
+    "img/wallets/helium-app/transfer-completed-transaction-v2.png"
+  )}
+/>
 
 ## Common Questions
-
 
 ### Can I undo the transaction?
 
@@ -115,4 +125,5 @@ transfer the Hotspot.
 ### Is the history of the Hotspot transferred to the new owner as well?
 
 Yes. All mining history from the Hotspot will transfer to the new owner as well.
-This cannot be cleared as all history is from the ledger.  It does not transfer any previously earned HNT.
+This cannot be cleared as all history is from the ledger. It does not transfer
+any previously earned HNT.
