--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -24,8 +24,7 @@ Depending on your situation, one of the wallets here may be the best fit.
 The Helium App wallet is by far the easiest to use. It may be downloaded for
 [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) or
 [Android](https://play.google.com/store/apps/details?id=com.helium.wallet)
-phones and provides simple pairing and setup with
-[Hotspots](/mine-hnt).
+phones and provides simple pairing and setup with [Hotspots](/mine-hnt).
 
 Generally, this wallet focuses on people who want to send or receive HNT or
 manage hotspots. Other activities, such as managing end-devices and OUIs (i.e.
@@ -40,8 +39,8 @@ The Helium Command Line Interface (CLI) wallet is the most flexible but it also
 requires more technical knowledge. As such, it is suitable for all types of
 transactions, but requires more caution on behalf of its users.
 
-Learn more about usage [here](/wallets/cli-wallet). Source code is
-available on [Github](https://github.com/helium/helium-wallet-rs).
+Learn more about usage [here](/wallets/cli-wallet). Source code is available on
+[Github](https://github.com/helium/helium-wallet-rs).
 
 ### Ledger Wallet
 
@@ -49,5 +48,5 @@ The Helium Ledger Wallet is an application that runs on the Ledger Hardware
 wallet. The Ledger Hardware wallet is the most secure way to send and receive
 the Helium Network Token (HNT), but currently supports no other transactions.
 
-Learn more about usage [here](/wallets/ledger). Source code is 
-available on [Github](https://github.com/helium/helium-ledger-cli).
+Learn more about usage [here](/wallets/ledger). Source code is available on
+[Github](https://github.com/helium/helium-ledger-cli).
