default prettier formatting on docs
npx prettier --write --prose-wrap always docs

--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -130,8 +130,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
         <h3>Maker Apps</h3>
         <p style={{ marginBottom: 40 }}>
           Makers have their own App to perform Hotspot onboarding, diagnostics,
-          and troubleshooting. <a href="/mine-hnt/maker-apps">Read more here</a>
-          .
+          and troubleshooting. <a href="/mine-hnt/maker-apps">Read more here</a>.
         </p>
       </div>
     </div>
