--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -12,7 +12,11 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 Witnesses on the Helium network are Hotspots that have seen (or witnessed) a
 Proof-of-Coverage packet from a Hotspot. This single-stage Proof-of-Coverage
 challenge is also known as a
-<a href="https://docs.helium.com/blockchain/proof-of-coverage/#witnesses">"Beacon"</a>.
+
+<a href="https://docs.helium.com/blockchain/proof-of-coverage/#witnesses">
+  "Beacon"
+</a>
+.
 
 Witness lists used to be used to construct multi-hop challenges, but since the
 network moved to use single-hop challenges (or beacons), it is no longer used
@@ -41,7 +45,11 @@ list directly correlates with mining rewards.
 The list you find in explorer.helium.com and the Helium app are a historical,
 cumulative set of Hotspots that your Hotspot has seen beacon. This list is based
 on 5 previous days of Proof-of-Coverage
-<a href="https://docs.helium.com/blockchain/blockchain-primitives/#transactions">receipts</a>.
+
+<a href="https://docs.helium.com/blockchain/blockchain-primitives/#transactions">
+  receipts
+</a>
+.
 
 Here is an example:
 
@@ -80,6 +88,7 @@ antenna placement so it can witness Hotspots in lesser populated areas and
 higher transmit scales.
 
 {" "}
+
 <img src={useBaseUrl("img/troubleshooting/witnessed.jpg")} />
 
 ### Witness List Resets
