--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -41,9 +41,13 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 <div style={{padding: '0px 0 50px'}}>
 
-:::info [Helium Discord](https://discord.gg/helium) is the best place to get
-real-time support from the community. And the `#console` and `#sensor-dev`
-channels are the two most relevant for developers using the Network. :::
+:::info
+
+[Helium Discord](https://discord.gg/helium) is the best place to get real-time
+support from the community. And the `#console` and `#sensor-dev` channels are
+the two most relevant for developers using the Network.
+
+:::
 
 </div>
 
