--- a/docs/wallets/app-wallet/hexagons.mdx
+++ b/docs/wallets/app-wallet/hexagons.mdx
@@ -15,8 +15,11 @@ can be represented by a grid of hexagons at different resolutions, with higher
 resolutions covering a larger area, and the smallest resolution covering
 centimeters of the earth. To understand the technical details and the
 implementation, please check out the
-<a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">blog
-one of the core developers</a>.
+
+<a href="https://blog.helium.com/mapping-the-world-with-hexagons-49f57d8b3df5">
+  blog one of the core developers
+</a>
+.
 
 | H3 Resolution | Average Hexagon Area (km²) | Average Hexagon Edge Length (km) |
 | ------------- | :------------------------: | -------------------------------: |
@@ -154,8 +157,11 @@ occupy that hex) at various resolutions (from resolution 12 down to resolution
 4). This means that if any Hotspots assert themselves within the 1770 km² area
 surrounding your Hotspot, your Hotspot's transmit scale can change. If you're
 interested in how this is calculated, check out the
-<a href="https://engineering.helium.com/2020/12/09/blockchain-release-hip-17.html">engineering
-blog</a>.
+
+<a href="https://engineering.helium.com/2020/12/09/blockchain-release-hip-17.html">
+  engineering blog
+</a>
+.
 
 To counteract the effects of a lower transmit scale, it is recommended that
 Hotspots improve their antenna setup (outdoors, higher gain, higher elevation)
