--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -4,7 +4,6 @@ hide_title: true
 sidebar_label: Home
 slug: /
 hide_table_of_contents: true
-
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
@@ -47,113 +46,241 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   </div>
 </div>
 
-<div class="container" style={{padding: 0, paddingTop: 100}}>
-	<div class="row">
-	    <div class="col col--6"  style={{marginBottom: 100}}>
-	    	<img className="homeicon" src={useBaseUrl("img/home/blockchainicon.png")} />
-	    	<h3>Helium Blockchain</h3>
-	    	<p className="podtext">The Helium Blockchain is a new blockchain built from the ground up to incentivize the creation of decentralized, public wireless networks.</p>
-	    	<a href="/blockchain">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
-	    	<h5>Quick Links</h5>
-	    	<a className="block" href="/blockchain/blockchain-primitives"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Blockchain Primitives</a>
-	    	<a className="block" href="/blockchain/mining"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Mining HNT</a>
-	    	<a className="block" href="/blockchain/proof-of-coverage"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Proof of Coverage</a>
-	    	<a className="block" href="/blockchain/consensus-protocol"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Consensus Protocol</a>
-	    	<a className="block" href="/blockchain/helium-token"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Helium Token</a>
-	    	<a className="block" href="/blockchain/transaction-fees"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Transaction Fees</a>
-	    </div>
-	    <div class="col col--6 blockblue" style={{marginBottom: 100}}>
-	   		<img className="homeicon" src={useBaseUrl("img/home/mineicon.png")} />
-	    	<h3>Mine $HNT</h3>
-	    	<p className="podtext">Hotspots create The People’s Network, a long-range wireless coverage for very low power and inexpensive IoT devices and are rewarded $HNT for doing so.</p>
-	    	<a href="/mine-hnt">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowblue.svg")} /></a>
-	    	<h5>Quick Links</h5>
-	    	<a className="block" href="/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> What is a Helium Miner?</a>
-	    	<a className="block" href="https://helium.com/mine"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Approved Hotspots</a>
-			<a className="block" href="/mine-hnt/validators"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Run an HNT Validator</a>
-	    	<a className="block" href="/mine-hnt/full-hotspots/#becoming-a-maker"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Become a Maker</a>
-			<a className="block" href="/mine-hnt/build-a-packet-forwarder"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Build a Packet Forwarder</a>
-	    </div>
-	    <div class="col col--6 blockgreen"  style={{marginBottom: 100}} >
-		    <img className="homeicon" src={useBaseUrl("img/home/useicon.png")} />
-		    <h3>Use the Helium Network</h3>
-		    <p className="podtext">The Helium Ecosystem includes thousands of ready-to-use devices, powerful integrations, and robust developer tools.</p>
-		    <a href="/use-the-network">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowgreen.svg")} /></a>
-		    <h5>Quick Links</h5>
-		    <a className="block" href="/use-the-network/devices"><img className="docicon" src={useBaseUrl("img/icons/docicongreen.svg")} /> Devices</a>
-		    <a className="block" href="/use-the-network/console"><img className="docicon" src={useBaseUrl("img/icons/docicongreen.svg")} /> Helium Console</a>
-			<a className="block" href="/lorawan-on-helium"><img className="docicon" src={useBaseUrl("img/icons/docicongreen.svg")} /> LoRaWAN on Helium</a>	
-	    </div>
-	    <div class="col col--6 blockred"  style={{marginBottom: 100}} >
-		    <img className="homeicon" src={useBaseUrl("img/home/communityicon.png")} />
-		    <h3>Community, Governance, & Open Source</h3>
-		    <p className="podtext">Helium’s decentralized ‘People’s Network’ relies on a community of supporters, developers and advisors.</p>
-		    <a href="/community-governance">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowred.svg")} /></a>
-		    <h5>Quick Links</h5>
-		    <a className="block" href="/community-governance#discord"><img className="docicon" src={useBaseUrl("img/icons/dociconred.svg")} /> Discord Community Chat</a>
-		    <a className="block" href="/community-governance#helium-improvement-proposals"><img className="docicon" src={useBaseUrl("img/icons/dociconred.svg")} /> Helium Improvement Proposals</a>
-		    <a className="block" href="/open-source/open-source"><img className="docicon" src={useBaseUrl("img/icons/dociconred.svg")} /> Open Source Software
-		    </a>
-	    </div>
-  	</div>
+<div class="container" style={{ padding: 0, paddingTop: 100 }}>
+  <div class="row">
+    <div class="col col--6" style={{ marginBottom: 100 }}>
+      <img
+        className="homeicon"
+        src={useBaseUrl("img/home/blockchainicon.png")}
+      />
+      <h3>Helium Blockchain</h3>
+      <p className="podtext">
+        The Helium Blockchain is a new blockchain built from the ground up to
+        incentivize the creation of decentralized, public wireless networks.
+      </p>
+      <a href="/blockchain">
+        Learn More{" "}
+        <img
+          className="linkarrow"
+          src={useBaseUrl("img/icons/linkarrow.svg")}
+        />
+      </a>
+      <h5>Quick Links</h5>
+      <a className="block" href="/blockchain/blockchain-primitives">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Blockchain Primitives
+      </a>
+      <a className="block" href="/blockchain/mining">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Mining HNT
+      </a>
+      <a className="block" href="/blockchain/proof-of-coverage">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Proof of Coverage
+      </a>
+      <a className="block" href="/blockchain/consensus-protocol">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Consensus Protocol
+      </a>
+      <a className="block" href="/blockchain/helium-token">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Helium Token
+      </a>
+      <a className="block" href="/blockchain/transaction-fees">
+        <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+        Transaction Fees
+      </a>
+    </div>
+    <div class="col col--6 blockblue" style={{ marginBottom: 100 }}>
+      <img className="homeicon" src={useBaseUrl("img/home/mineicon.png")} />
+      <h3>Mine $HNT</h3>
+      <p className="podtext">
+        Hotspots create The People’s Network, a long-range wireless coverage for
+        very low power and inexpensive IoT devices and are rewarded $HNT for
+        doing so.
+      </p>
+      <a href="/mine-hnt">
+        Learn More{" "}
+        <img
+          className="linkarrow"
+          src={useBaseUrl("img/icons/linkarrowblue.svg")}
+        />
+      </a>
+      <h5>Quick Links</h5>
+      <a className="block" href="/mine-hnt">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/dociconblue.svg")}
+        />{" "}
+        What is a Helium Miner?
+      </a>
+      <a className="block" href="https://helium.com/mine">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/dociconblue.svg")}
+        />{" "}
+        Approved Hotspots
+      </a>
+      <a className="block" href="/mine-hnt/validators">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/dociconblue.svg")}
+        />{" "}
+        Run an HNT Validator
+      </a>
+      <a className="block" href="/mine-hnt/full-hotspots/#becoming-a-maker">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/dociconblue.svg")}
+        />{" "}
+        Become a Maker
+      </a>
+      <a className="block" href="/mine-hnt/build-a-packet-forwarder">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/dociconblue.svg")}
+        />{" "}
+        Build a Packet Forwarder
+      </a>
+    </div>
+    <div class="col col--6 blockgreen" style={{ marginBottom: 100 }}>
+      <img className="homeicon" src={useBaseUrl("img/home/useicon.png")} />
+      <h3>Use the Helium Network</h3>
+      <p className="podtext">
+        The Helium Ecosystem includes thousands of ready-to-use devices,
+        powerful integrations, and robust developer tools.
+      </p>
+      <a href="/use-the-network">
+        Learn More{" "}
+        <img
+          className="linkarrow"
+          src={useBaseUrl("img/icons/linkarrowgreen.svg")}
+        />
+      </a>
+      <h5>Quick Links</h5>
+      <a className="block" href="/use-the-network/devices">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/docicongreen.svg")}
+        />{" "}
+        Devices
+      </a>
+      <a className="block" href="/use-the-network/console">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/docicongreen.svg")}
+        />{" "}
+        Helium Console
+      </a>
+      <a className="block" href="/lorawan-on-helium">
+        <img
+          className="docicon"
+          src={useBaseUrl("img/icons/docicongreen.svg")}
+        />{" "}
+        LoRaWAN on Helium
+      </a>
+    </div>
+    <div class="col col--6 blockred" style={{ marginBottom: 100 }}>
+      <img
+        className="homeicon"
+        src={useBaseUrl("img/home/communityicon.png")}
+      />
+      <h3>Community, Governance, & Open Source</h3>
+      <p className="podtext">
+        Helium’s decentralized ‘People’s Network’ relies on a community of
+        supporters, developers and advisors.
+      </p>
+      <a href="/community-governance">
+        Learn More{" "}
+        <img
+          className="linkarrow"
+          src={useBaseUrl("img/icons/linkarrowred.svg")}
+        />
+      </a>
+      <h5>Quick Links</h5>
+      <a className="block" href="/community-governance#discord">
+        <img className="docicon" src={useBaseUrl("img/icons/dociconred.svg")} />{" "}
+        Discord Community Chat
+      </a>
+      <a
+        className="block"
+        href="/community-governance#helium-improvement-proposals"
+      >
+        <img className="docicon" src={useBaseUrl("img/icons/dociconred.svg")} />{" "}
+        Helium Improvement Proposals
+      </a>
+      <a className="block" href="/open-source/open-source">
+        <img className="docicon" src={useBaseUrl("img/icons/dociconred.svg")} />{" "}
+        Open Source Software
+      </a>
+    </div>
+  </div>
 </div>
-<div class="container" style={{padding: 0}}>
-<hr />
+<div class="container" style={{ padding: 0 }}>
+  <hr />
 </div>
-<div class="container" style={{padding: 0, paddingTop: 100}}>
-	<div class="row">
-	    <div class="col col--12" style={{marginBottom: 50}}>
-	    	<h2>Tools, Technologies & Initatives</h2>
-	    </div>
-	    <div class="col col--6">
-	    	<div className="tech--item">
-	    		 <img className="techicon" src={useBaseUrl("img/home/console.svg")} />
-	    		 <div className="tech--item_text">
-	    		 	<a href="/use-the-network/console"><h4>Console</h4></a>
-	    		 	<p>Provision and Manage Devices</p>
-	    		 </div>
-	    	</div>
-	    	<div className="tech--item">
-	    		 <img className="techicon" src={useBaseUrl("img/home/explorer.svg")} />
-	    		 <div className="tech--item_text">
-	    		 	<a href="https://explorer.helium.com"><h4>Explorer</h4></a>
-	    		 	<p>Helium Blockchain Block Explorer</p>
-	    		 </div>
-	    	</div>
-	    	<div className="tech--item">
-	    		 <img className="techicon" src={useBaseUrl("img/home/mappers.svg")} />
-	    		 <div className="tech--item_text">
-	    		 	<a href="https://mappers.helium.com"><h4>Mappers</h4></a>
-	    		 	<p>Community-driven Coverage Mapping</p>
-	    		 </div>
-	    	</div>
-	    	<div className="tech--item">
-	    		 <img className="techicon" src={useBaseUrl("img/home/walletapp.svg")} />
-	    		 <div className="tech--item_text">
-	    		 	<a href="https://helium.com/app"><h4>Wallet App</h4></a>
-	    		 	<p>iOS & Android Helium Wallet</p>
-	    		 </div>
-	    	</div>
-	    </div>
-	    <div class="col col--6">
-	    	<div className="tech--item">
-	    		 <img className="techicon" src={useBaseUrl("img/home/cli.svg")} />
-	    		 <div className="tech--item_text">
-	    		 	<a href="https://github.com/helium/helium-wallet-rs"><h4>Helium Wallet CLI</h4></a>
-	    		 	<p>Interact with Blockchain via Command Line</p>
-	    		 </div>
-	    	</div>
-	    	<div className="tech--item">
-	    		 <img className="techicon" src={useBaseUrl("img/home/longfi.svg")} />
-	    		 <div className="tech--item_text">
-	    		 	<a href="https://github.com/helium/gateway-rs"><h4>Helium Light Hotspots</h4></a>
-	    		 	<p>Packet forwarder for the Helium-enabled Gateways.</p>
-	    		 </div>
-	    	</div>
-	    </div>
-	</div>
+<div class="container" style={{ padding: 0, paddingTop: 100 }}>
+  <div class="row">
+    <div class="col col--12" style={{ marginBottom: 50 }}>
+      <h2>Tools, Technologies & Initatives</h2>
+    </div>
+    <div class="col col--6">
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl("img/home/console.svg")} />
+        <div className="tech--item_text">
+          <a href="/use-the-network/console">
+            <h4>Console</h4>
+          </a>
+          <p>Provision and Manage Devices</p>
+        </div>
+      </div>
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl("img/home/explorer.svg")} />
+        <div className="tech--item_text">
+          <a href="https://explorer.helium.com">
+            <h4>Explorer</h4>
+          </a>
+          <p>Helium Blockchain Block Explorer</p>
+        </div>
+      </div>
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl("img/home/mappers.svg")} />
+        <div className="tech--item_text">
+          <a href="https://mappers.helium.com">
+            <h4>Mappers</h4>
+          </a>
+          <p>Community-driven Coverage Mapping</p>
+        </div>
+      </div>
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl("img/home/walletapp.svg")} />
+        <div className="tech--item_text">
+          <a href="https://helium.com/app">
+            <h4>Wallet App</h4>
+          </a>
+          <p>iOS & Android Helium Wallet</p>
+        </div>
+      </div>
+    </div>
+    <div class="col col--6">
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl("img/home/cli.svg")} />
+        <div className="tech--item_text">
+          <a href="https://github.com/helium/helium-wallet-rs">
+            <h4>Helium Wallet CLI</h4>
+          </a>
+          <p>Interact with Blockchain via Command Line</p>
+        </div>
+      </div>
+      <div className="tech--item">
+        <img className="techicon" src={useBaseUrl("img/home/longfi.svg")} />
+        <div className="tech--item_text">
+          <a href="https://github.com/helium/gateway-rs">
+            <h4>Helium Light Hotspots</h4>
+          </a>
+          <p>Packet forwarder for the Helium-enabled Gateways.</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
-
